// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Profiles /> renders the <Profiles /> with populated data 1`] = `
<div
  class="profiles__Container-bxtkkv-0 eJHeUh"
>
  <h1
    class="profiles__Title-bxtkkv-1 btPsZD"
  >
    Who's watching?
  </h1>
  <ul
    class="profiles__List-bxtkkv-2 ibPFSe"
  >
    <li
      class="profiles__Item-bxtkkv-5 eDFoPG"
    >
      <img
        class="profiles__Picture-bxtkkv-4 cUxMIU"
        data-testid="profile-picture"
        src="/images/users//images/karl.png.png"
      />
      <p
        class="profiles__Name-bxtkkv-3 bLwqOe"
      >
        Karl
      </p>
    </li>
  </ul>
</div>
`;

exports[`<Profiles /> renders the <Profiles /> with populated data but misc profile image 1`] = `
<div
  class="profiles__Container-bxtkkv-0 eJHeUh"
>
  <h1
    class="profiles__Title-bxtkkv-1 btPsZD"
  >
    Who's watching?
  </h1>
  <ul
    class="profiles__List-bxtkkv-2 ibPFSe"
  >
    <li
      class="profiles__Item-bxtkkv-5 eDFoPG"
    >
      <img
        class="profiles__Picture-bxtkkv-4 cUxMIU"
        data-testid="profile-picture-misc"
        src="/images/misc/loading.gif"
      />
      <p
        class="profiles__Name-bxtkkv-3 bLwqOe"
      >
        Karl
      </p>
    </li>
  </ul>
</div>
`;
